bug overflow fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,7 @@
     font-family: 'lato', sans-serif;
   }
    
+
 .formRegister,.login{
   display: flex;
   flex-direction: column;
@@ -253,6 +254,7 @@ body,html,#app{
   font-family: 'Lato', sans-serif;
   background:#1D3557;
   color: white;
+  overflow-x: hidden;
 }
 
 .LivreP{
@@ -314,7 +316,9 @@ body,html,#app{
 .RegisterZone label{
   color: black;
 }
+
 @media (max-width:1050px) {
+  
   .nav{
     height: 10%;
     display:flex;
